<resources>
    <string name="app_name">Curveball Launcher</string>
    <string name="action_settings">Settings</string>
    <string name="hideApps">Manage hidden apps</string>
    <string name="settingsName">Settings</string>
    <string name="helpName">Help</string>
    <string name="delete">Delete</string>
    <string name="change_icon">Change Icon</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_sample_name">Widget Name</string>
    <string name="sample">Sample Text</string>
    <string name="change_wallpaper">Change wallpaper</string>
    <string name="add_to_dock">To Dock</string>
    <string name="uninstall">Uninstall</string>
    <string name="new_row">New Row</string>
    <string name="search_hint">Search apps</string>
    <string name="remove_row">Remove Row</string>
    <string name="resize_widget">Resize Widget</string>
    <string name="remove_widget">Remove Widget</string>
    <string name="default_widget_name">Widget Name</string>
    <string name="title_activity_icon_chooser">Choose An Icon</string>
    <string name="drop_icon_hint">Drop here!</string>
    <string name="edit_widget">Edit Widget</string>
    <string name="app_defaults">Default apps</string>
    <string name="default_clock_app">Clock shortcut</string>
    <string name="default_clock_summary">App to launch when clicking the clock.</string>
    <string name="default_calendar_app">Calendar shortcut</string>
    <string name="default_calendar_summary">App to launch when clicking the calendar.</string>
    <string name="default_search_app">Search shortcut</string>
    <string name="default_search_summary">App to launch when swiping right on the homescreen…</string>
    <string name="widgets">Widgets</string>
    <string name="resize_all_widgets">Resize All Widgets</string>
    <string name="resize_all_widgets_summary">Resize any widget if desired, regardless of widget\'s capability to support resizing. May produced undesirable effects on certain widgets.</string>
    <string name="widget_no_longer_installed">Widget is no longer installed.</string>
    <string name="edit_rows">Edit Rows</string>
    <string name="cancel">Cancel</string>
    <string name="no_rows">No rows to be edited. Add one by long-pressing an icon in the app drawer.</string>
    <string name="cant_remove_last">Can\'t remove last item in the list.</string>
    <string name="remove_dock_item">Remove dock item</string>
    <string name="remove_dock_item_message">Would you like to remove %s from the dock?</string>
    <string name="yes">Yes</string>
    <string name="app_info">App info</string>
    <string name="name_your_folder">Name your folder</string>
    <string name="reorder_rows">Reorder rows</string>
    <string name="sample_text">Some sample text</string>
    <string name="no_snacklets_found">No snacklets found.</string>
    <string name="advanced">Advanced</string>
    <string name="debug_modules">Debug Snacklets</string>
    <string name="debug_modules_summary">Debug snacklets by viewing on-screen errors when invalid module data is sent.</string>
    <string name="module_error">Error in module</string>
    <string name="invalid_launch_specified">Invalid data specified to launch.</string>
    <string name="open_snacklet">Open Snacklet</string>
    <string name="replace_widget_with_clock">Replace time and date with a widget</string>
    <string name="replace_widget_with_clock_summary">Replace the clock on the home screen with a widget.</string>
    <string name="home_widget_change">Choose the desired widget from the menu next to the search bar.</string>
    <string name="clear_all">Clear all</string>
    <string name="set_home_widget">Set Homescreen Widget</string>
    <string name="no_row_specified">No apps specified to launch.</string>
    <string name="failed_to_open_database">Failed to open database!</string>
    <string name="unable_to_start_app">Unable to start an app. It may be uninstalled/upgrading.</string>
    <string name="clear_snacklets">Clear Snacklets</string>
    <string name="enable_usage_viewing">Show suggestions</string>
    <string name="enable_usage_viewing_message">Let us show your commonly used apps in the bottom bar by enabling Usage Access for Curveball. The launcher will work without this, but it won\'t deliver many (if any) suggestions.</string>
    <string name="enable">Enable</string>
    <string name="cant_start">Couldn\'t start this app!</string>
    <string name="batch_open">Batch Open</string>
    <string name="default_charging_app">Charging shortcut</string>
    <string name="default_charging_app_summary">App to show in suggestions bar when charging.</string>
    <string name="default_low_power_app">Low power app</string>
    <string name="default_low_power_app_summary">App to show in suggestions bar when running low on power.</string>
    <string name="default_phone_app">Phone shortcut</string>
    <string name="default_phone_app_summary">App to show in suggestions bar when on a phone call.</string>
    <string name="welcome_title">Welcome</string>
    <string name="lets_go">Lets go!</string>
    <string name="tutorial_please">Tutorial please.</string>
    <string name="bah_humbug">Bah humbug.</string>
    <string name="cheer_up">Cheer up! We have swipe-y gestures and pretty colors.</string>
    <string name="done">Done</string>
    <string name="no_batch_rows">No rows to batch open. Add one by long pressing on an icon in the app drawer.</string>
    <string name="i_am_a_phone">This device is a phone</string>
    <string name="phone_pref_summary">Check this bock if your device is accidentally recognized as tablet, but it\'s really a phone (rare; mostly affects devices with build.prop modifications).</string>
    <string name="recent_apps_desc">Apps you\'ve used recently.</string>
    <string name="calendar_desc">A suggested app because you\'re in a calendar event.</string>
    <string name="call_desc">A suggested app because you\'re in a call.</string>
    <string name="battery_desc">A suggested app because of your battery\'s status.</string>
    <string name="next_alarm_at">Next alarm at %s</string>
    <string name="aggresive_icon_caching">Aggressive icon caching</string>
    <string name="aggresive_icon_caching_summary">Fetch launcher icons when we start. Provides a better experience, but may harm startup performance on low-end devices.</string>
    <string name="element_size">Max amount needed to move between each element of swipe view.</string>
    <string name="element_size_descriptions">Affects the main gesture view.</string>
    <string name="gesture_swipe">Gesture Swiping</string>
    <string name="element_size_title">Distance between elements</string>
    <string name="icon_size_small">Small icon size</string>
    <string name="icon_size_pref">Big icon size</string>
    <string name="preferences_name">Preferences</string>
    <string name="vertical_scroller_title">Use alternate design</string>
    <string name="vertical_scroller_description">Use a vertically scrolling homescreen design</string>
    <string name="use_g_weather_title">Open G Weather instead of bottom sheet</string>
    <string name="use_g_weather_description">Launch the usually installed weather intent instead of a limited bottom sheet showing the next few days weather.</string>
    <string name="attributions">Attributions</string>
    <string name="tap_to_view_software_used">Tap to view software used in creating this product.</string>
    <string name="close">Close</string>
    <string name="show_debug_log">Show debug log</string>
    <string name="show_debug_log_summary">Show the debugging log.</string>
    <string name="clear_debug_log">Clear debug log</string>
    <string name="clear_debug_log_summary">Reset the debug log.</string>
    <string name="use_celcius">Use celcius</string>
    <string name="use_celcius_summary">Use celcius instead of farenheight for the weather temperature.</string>
    <string name="hide">Hide</string>
    <string name="button_to_hide_item">Button to hide item</string>
    <string name="ipsum">Lorem ipsum et al ipsum circa est lorem</string>
    <string name="ipsum_short">1</string>
    <string name="database_management">Database management</string>
    <string name="reset_database">Reset database</string>
    <string name="reset_database_description">Drop all database data and restart the app.</string>
    <string name="move_database_to_b_slot">Move database to backup slot</string>
    <string name="move_database_to_b_slot_description">Copy the database into the backup slot in app data.</string>
    <string name="overwrite_from_b_slot">Overwrite active database from the backup slot</string>
    <string name="overwrite_from_b_slot_description">Take the database saved in the backup slot, and overwrite the active database.</string>
    <string name="import_database_from_storage">Import database from storage</string>
    <string name="import_database_from_storage_description">Perform a database import from storage.</string>
    <string name="export_database_to_storage">Export database to storage</string>
    <string name="export_database_to_storage_description">Export database (layout, hidden apps) to phone storage.</string>
    <string name="dock_items">Dock items</string>
    <string name="manage_hidden_calendars">Manage hidden calendars</string>
    <string name="manage_hidden_calendars_description">Choose the calendars that won\'t show up in dock suggestions.</string>
    <string name="weclome_headline">Welcome! Consider granting the following permissions for the best experience. The launcher will still work without access to the following permissions.</string>
    <string name="grant_permissions">Grant general permissions</string>
    <string name="app_usage_explainer">Turning on app usage access allows the launcher show recently used apps in the dock.</string>
    <string name="grant_app_usage_permission">Grant app usage permission</string>
</resources>